--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,67 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <title>Farming and Agriculture Management</title>
-</head>
-<body>
-<h1><span style="color: #993399;">Farming and Agriculture Management</span>
-</h1>
-<p>This module contain a management tool and organize farm productive and
-    service activity to ensure and control expenditure and activities.</p>
-<p><strong>"Project" is the main object to control.</strong></p>
-<p>4 types of Project:</p>
-<ol>
-    <li>Produce only: Controlling on produce process; added to stock all the
-        way long.
-    </li>
-    <li>Produce and sell: Controlling on how much produce and how much sold.</li>
-    <li>Sell only:Controlling on how much sold on project lifetime.</li>
-    <li>Service:Controlling on service e.g(device, vehicle, Quality control,
-        pest control, internal maintenance service etc. )
-    </li>
-</ol>
-<p><br>
-</p>
-<p><strong>Order and Actual:</strong></p>
-<p>spending use 3 type of order (Operation - Material - Expenses) that
-    create account/stock movements.</p>
-<p><br>
-</p>
-<p><strong>Produce and Sales:</strong></p>
-<p>Additional 2 types of orders balancing the spending </p>
-<p><br>
-</p>
-<p><strong>Service Bills and Invoices:</strong></p>
-<p>For Service Projects the balance of spending from internal activities
-    (bills) and external activities (invoices to external parties)</p>
-<p><br>
-</p>
-<p><strong>Project Summary:</strong></p>
-<p>a comparison will be shown in summary page between planned and actual
-    spent and time.</p>
-<p> showing progress and comparison in ratio and progress widgets. like;
-    actual vs budget - plan vs actual - initial gross profit/loss - time gone
-    vs&nbsp; time planed.<br>
-</p>
-<p><br>
-</p>
-<br>
-<table border="2" style="width: 100%">
-    <tbody>
-    <tr>
-        <td style="background-color: #ccccff;">
-            <div style="text-align: center;">If you need any support, just
-                contact us:
-            </div>
-            <p> email: medo.sobh76@gmail.com</p>
-            <p>Linkedin: https://www.linkedin.com/in/mohamed-sobh-898a1140/</p>
-            <p>phone: +201060315818</p>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<p><br>
-</p>
-</body>
-</html>
+<section lang="en">
+    <section>
+        <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+        <title>Farming and Agriculture Management</title>
+    </section>
+    <section>
+        <h1><span style="color: #993399;">Farming and Agriculture Management</span>
+        </h1>
+        <p>This module contain a management tool and organize farm productive and
+            service activity to ensure and control expenditure and activities.</p>
+        <p><strong>"Project" is the main object to control.</strong></p>
+        <p>4 types of Project:</p>
+        <ol>
+            <li>Produce only: Controlling on produce process; added to stock all the
+                way long.
+            </li>
+            <li>Produce and sell: Controlling on how much produce and how much sold.</li>
+            <li>Sell only:Controlling on how much sold on project lifetime.</li>
+            <li>Service:Controlling on service e.g(device, vehicle, Quality control,
+                pest control, internal maintenance service etc. )
+            </li>
+        </ol>
+        <p><br>
+        </p>
+        <p><strong>Order and Actual:</strong></p>
+        <p>spending use 3 type of order (Operation - Material - Expenses) that
+            create account/stock movements.</p>
+        <p><br>
+        </p>
+        <p><strong>Produce and Sales:</strong></p>
+        <p>Additional 2 types of orders balancing the spending </p>
+        <p><br>
+        </p>
+        <p><strong>Service Bills and Invoices:</strong></p>
+        <p>For Service Projects the balance of spending from internal activities
+            (bills) and external activities (invoices to external parties)</p>
+        <p><br>
+        </p>
+        <p><strong>Project Summary:</strong></p>
+        <p>a comparison will be shown in summary page between planned and actual
+            spent and time.</p>
+        <p> showing progress and comparison in ratio and progress widgets. like;
+            actual vs budget - plan vs actual - initial gross profit/loss - time gone
+            vs&nbsp; time planed.<br>
+        </p>
+        <p><br>
+        </p>
+        <br>
+        <table border="2" style="width: 100%">
+            <tbody>
+            <tr>
+                <td style="background-color: #ccccff;">
+                    <div style="text-align: center;">If you need any support, just
+                        contact us:
+                    </div>
+                    <p> email: medo.sobh76@gmail.com</p>
+                    <p>Linkedin: https://www.linkedin.com/in/mohamed-sobh-898a1140/</p>
+                    <p>phone: +201060315818</p>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <p><br>
+        </p>
+    </section>
+</section>
